# llm-free-gateway-v2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPENDENCIES.md  config.example.toml
.forgejo/workflows/: ci.yml  deploy.yml
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  provider_pool.rs  rate_limit.rs  registry.rs  token_counter.rs
src/handlers/: chat.rs  embeddings.rs  health.rs  metrics_handler.rs  mod.rs  models.rs
src/providers/: mod.rs  openai_compat.rs
tests/: alias_strict.rs  fallback_openrouter.rs  smoke.rs  sse_conversational_passthrough.rs  sse_tool_calls_passthrough.rs  token_cap.rs
