[package]
name = "llm-free-gateway-v2"
version = "0.1.0-alpha.2"
edition = "2021"
publish = false

[[bin]]
name = "llm-free-gateway-v2"
path = "src/main.rs"

[lib]
name = "llm_free_gateway_v2"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures = "0.3"
toml = "0.8"
bytes = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures-core = "0.3"
# Registry SQLite — bundled = compile SQLite statiquement, pas de dépendance système
rusqlite = { version = "0.32", features = ["bundled"] }
llm-commons = { version = "0.5.0-alpha.3", features = ["openai", "provider", "streaming", "health"], registry = "kellnr" }

[dev-dependencies]
tempfile = "3"
axum-test = "20"
